--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="static/css/main.css"> 
 
 </head>
+
 <div class="container">
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
          <img class="icon" src="{{url_for('static', filename='img/icon.png') }}" >
@@ -27,39 +28,25 @@
   </div>
 <body>
    
-    <div class="container">
+  <div class="container">
 
-      <div class="wrapper">
-         <!-- Вывод статей -->
-         {% for article in articles %}
-        <div class="col-md-12">
-        <div class="article">
-        <article id="article-{{ article.id }}">
-          <h2>{{ article.title }}</h2>
-          <p>{{ article.content }}</p>
-          <img class="images" src="{{ article.image_url }}" alt="{{ article.title }}">
-        </article>
-        <div class="article-comment">
-          <!-- Форма для добавления нового комментария -->
-          <form action="{{ url_for('add_comment', article_id=article.id) }}" method="post">
-            <textarea name="content" rows="4" cols="50"></textarea>
-            <button type="submit" class="submit">Добавить комментарий</button>
-        </form>
-        <!-- Вывод комментариев для данной статьи -->
-          {% for comment, user in comments %}
-            {% if comment.article_id == article.id %}
-              <li class="comment">
-                <span class="user-login">{{ user.username }}:</span>
-                {{ comment.content }}</li>
-            {% endif %}
-          {% endfor %}
-        </div>
-        </div>    
-        </div>
-        {% endfor %}
+    <div class="wrapper">
+       <!-- Вывод статей -->
+       {% for article in articles %}
+      <div class="col-md-12">
+      <div class="article">
+      <article id="article-{{ article.id }}">
+        <h2>{{ article.title }}</h2>
+        <p>{{ article.content[:200] }}...</p>
+        <img class="images" src="{{ article.image_url }}" alt="{{ article.title }}">
+        <a href="/article/{{ article.id }}">Читать далее</a>
+      </article>
       </div>
+      </div> 
+      {% endfor %}   
     </div>
-      
+  </div>
+  
      
 </body>
 </html>
