--- a/templates/article.html
+++ b/templates/article.html
@@ -31,7 +31,7 @@
 
         <div class="wrapper">
            <!-- Вывод статей -->
-           {% for article in articles %}
+           {% for article in article %}
           <div class="col-md-12">
           <div class="article">
           <article id="article-{{ article.id }}">
