--- a/templates/article.html
+++ b/templates/article.html
@@ -11,7 +11,7 @@
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
            <img class="icon" src="{{url_for('static', filename='img/icon.png') }}" >
   
-          <ul class="menu">
+         <!-- <ul class="menu">
             <li>
               <button class="main">Статьи</button>
               <ul class="submenu">
@@ -20,7 +20,7 @@
                 {% endfor %}
               </ul>
             </li>
-          </ul>
+          </ul> -->
   
           <button type="exit" class="logout-btn"onclick="location.href='/login'">&times;</button>
     </header>
