--- a/static/css/main.css
+++ b/static/css/main.css
@@ -125,6 +125,8 @@ header nav a:hover {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(2.8px);
 
+  display: flex;
+  flex-direction: column;
 } 
   
   .article h3 { 
@@ -192,6 +194,21 @@ textarea:focus {
   margin-left: 15%;
 }
 
+.read {
+  display: inline-block;
+    padding: 5px 10px;
+    background-color: #ffffff;
+    color: #000000;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 10px;
+    transition: background-color 0.3s ease;
+}
+
+.read:hover {
+  background-color: #007bff;
+  color: #fff;
+}
 
 
 
