--- a/static/css/css.css
+++ b/static/css/css.css
@@ -1,6 +1,10 @@
 /* Стили для формы регистрации / авторизации */
 *{
-  font-family: 'Poppins', sans-serif;}
+  font-family: 'Poppins', sans-serif;
+
+  margin: 0;
+  padding: 0;
+}
 
 body{
   background-image: url("../img/liquid.jpg");
@@ -10,14 +14,19 @@ body{
   center;
   background-attachment: fixed;
   
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  flex-direction: column;
   }
 
-.box{
+/*.box{
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 90vh;
-  }
+  } */
 .container{
   width: 80%; 
   max-width: 500px;
@@ -30,7 +39,7 @@ body{
   }
 span{
       color: #000000;
-      font-size: small;
+      font-size: 20px;
       display: flex;
       justify-content: center;
       padding: 10px 0 15px 0;
@@ -115,4 +124,23 @@ ul.flashes li {
   margin-bottom: 10px;
   color: #ff0000;
   text-align: center;
+}
+
+@media (max-width: 767px) {
+  .container {
+    width: 100%;
+    max-width: 100%;
+    padding: 40px 20px; /* Увеличены отступы контейнера */
+  }
+
+  .input {
+    width: 94%;
+  }
+  header {
+    font-size: 30px; /* Еще больше увеличен размер шрифта */
+  }
+
+  span {
+    font-size: 20px; /* Еще больше увеличен размер шрифта */
+  }
 }
