--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,10 @@
 <head>
     <title>Авторизация</title>
     <link rel="stylesheet" type="text/css" href="../static/css/css.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">     
 </head>
 <body>
-    <div class="box">
+   <!-- <div class="box"> -->
         <div class="container">
             <img class="icon" src="{{url_for('static', filename='img/icon.png') }}" > 
             <div class="top-header">
@@ -35,7 +36,7 @@
             {% endif %}
            {% endwith %} 
         </div>
-    </div> 
+   <!-- </div> -->
 
 </body>
 </html>
