--- a/templates/register.html
+++ b/templates/register.html
@@ -3,10 +3,10 @@
 <head>
     <title>Регистрация</title>
     <link rel="stylesheet" type="text/css" href="static/css/css.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 </head>
 <body>
 
-<div class="box">
         <div class="container">
             <img class="icon" src="{{url_for('static', filename='img/icon.png') }}" > 
             <div class="top-header">
@@ -38,9 +38,7 @@
             {% endif %}
            {% endwith %} 
         </div>
-    </div> 
-</div>
-</div> 
+
 
 </body>
 </html>
